# Y2_Genepanel_project

./: .gitignore  Dockerfile  Dockerfile(2)  Dockerfile.txt  Extract_data_guidance.md  FrontEndIntial.html  Jenkins_Console_pytests.txt  Jenkinsfile  Jenkinsfile.txt  NGTD_Database_Master.py  Pandas_RD_TD.py  PanelRequestDB.py  README.md  USER_GUIDE.md  USER_GUIDE2.md  api_ensembl.py  app.py  config.json  dummy_database.py  environment.yml  gene_list.csv  panelApp_api.py  panelApp_extract_data.py  pyproject.toml  requirement.txt  requirements.txt  setup.py  test.py
PanelGeneMapper/: __init__.py  build_panelApp_database.py  build_patient_database.py  generate_valid_rcode_list.py  panelgenemapper.py  retrieve_data.py  settings.py
config/: app_config.json
configuration/: app_config.json  build_panelApp_database_config.json
databases/: patient_data.json  patient_database.db
docs/: CLI_MANUAL.md  DOCKER.md  FLASKAPP_MANUAL.md  INSTALLATION.md  UI_MANUAL.md
ensembl_package/: api_ensembl.py
generate_valid_rcodes_output/: processed_panelApp_versions.txt  unique_relevant_disorders.txt
logs/: panel_gene_mapper_info.log.1
output/: gene_data.db  gene_exons.bed  gene_list.csv  processed_panelApp_versions.txt
planning_materials/: 3BC2003D-E618-4240-8717-2B8C32E9A352_1_201_a.heic  72E6688E-DD2D-4C38-AE7E-3BC072DFF6AE_1_201_a.heic  74968A95-9E07-4037-856A-7165AED54314_1_201_a.heic  C0CDE658-3EA6-40DF-A31B-C20CB71419EC_1_201_a.heic  CACE7381-DCA3-4042-BD0B-48A5C9F4FA0B_1_201_a.heic  Sprint 4 Planning Documentation.docx  Sprint 4 Planning Documentation.md  future_tests_index.html  future_tests_script.js  future_tests_style.css  settings.py
static/: index.html  script.js  style.css
templates/: index.html  results.html
test/: test_api_ensembl.py
tests/: conftest.py  test1_instructions.txt  test_build_panelApp_database.py  test_build_patient_database.py  test_check_panel_updates.py  test_custom_logging.py  test_database_utils.py  test_flaskapp_functional_app.py  test_flaskapp_functional_compare_live_panelapp.py  test_flaskapp_unit_config.py  test_flaskapp_unit_db.py  test_flaskapp_unit_helpers.py  (+9 more)
(+18 files in other folders)
